[Payments] Multiple sections in web app manifest.

Before this patch, parsing a web app manifest with multiple
"related_applications" would return an empty manifest. Multiple
different "fingerprints" would return the first fingerprint multiple
times. These bugs occurred because of incorrect usage of index "i"
instead of "j" for "fingerprints". The "i" index is used only for
"related_applications".

This patch adds tests TwoRelatedApplicationsWellFormed for parsing two
"related_applications" and TwoDifferentSignaturesWellFormed for parsing
multiple different "fingerprints" in the web app manifest. Before the
fix, the tests fail. The tests pass after the fix, which is to use "j"
instead of "i" index for "fingerprints".

After this patch, parsing a web app manifest with multiple
"related_applications" returns a manifest with two sections. Parsing
multiple different "fingerprints" returns different parsed fingerprints.

Bug: 745765
Change-Id: I43953748a405e5d3ef2329e22ba3ff449b10f104
Reviewed-on: https://chromium-review.googlesource.com/575715
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487611}
Former-commit-id: 9e00df079b7f71c9e2f478352eefb5713e8f50df